--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,14 +1,17 @@
 html {
   width: 100%;
   height: 100%;
+  overflow: none;
 }
 
 body {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 #root {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
